#
# Xin YUAN, 2019, BSD (2)
#

# target

INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/public"
	"${PROJECT_SOURCE_DIR}/src"
	"${PROJECT_SOURCE_DIR}/tools/wmc/src"
	)

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/tools-bin")
SET(SRC_PCH_LIST "precomp.cpp")
SET(SRC_LIST "src/main.cpp" "src/ProcessFile.cpp"
	)
ADD_EXECUTABLE(wmc ${SRC_PCH_LIST} ${SRC_LIST})
SET_PCH(wmc "exe" "precomp.h" ${SRC_PCH_LIST} ${SRC_LIST})
SET_TARGET_PROPERTIES(wmc PROPERTIES
	OUTPUT_NAME "wmc"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET_C}")
TARGET_LINK_LIBRARIES(wmc CSL-Utility ${STRING_LINK_EXTRA_LIBS})

# end
